@@ -311,6 +311,7 @@ struct options
     set *excludeRegsSet;        /* registers excluded from saving */
 /*  set *olaysSet;               * not implemented yet: overlay segments used in #pragma OVERLAY */
     int max_allocs_per_node;    /* Maximum number of allocations considered at each node in the tree-decomposition based register allocator */
+    int noOptsdccInAsm;         /* Do not emit .optsdcc in asm */
   };
 
 /* forward definition for variables accessed globally */
