@@ -1,3 +1,10 @@
+2011-06-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmain.c,
+	  src/SDCCglue.c,
+	  src/SDCCglobl.h:
+	  Add --no-sdccopt-in-asm option, since the .optsdcc directive confuses some assemblers.
+
 2011-05-26 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c: changed snprintf to SNPRINTF,
